--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -6,6 +6,6 @@ COPY requirements.txt /app
 
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
 
-COPY api_yamdb/ /app
+COPY . .
 
 CMD ["python3", "manage.py", "runserver", "0:8000"] 
