--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -6,7 +6,7 @@ colorama==0.4.6
 Django==2.2.16
 django-filter==21.1
 djangorestframework==3.12.4
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt
 idna==3.4
 iniconfig==1.1.1
 packaging==21.3
